/*
 * Tencent is pleased to support the open source community by making Angel available.
 *
 * Copyright (C) 2017 THL A29 Limited, a Tencent company. All rights reserved.
 *
 * Licensed under the BSD 3-Clause License (the "License"); you may not use this file except in
 * compliance with the License. You may obtain a copy of the License at
 *
 * https://opensource.org/licenses/BSD-3-Clause
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License is
 * distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 * either express or implied. See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "com.tencent.angel.protobuf.generated";

option java_outer_classname = "AgentServingServiceProtos";

option java_generate_equals_and_hash = true;

option java_generic_services = true;

option optimize_for = SPEED;

import "ML.proto";
import "Serving.proto";


message ModelSplitIDProto {
  required string name = 1;
  required int32 index = 2;
}

message ServingHostProto {
  required string host = 1;
}

message ModelReportProto {
  required ServingLocationProto loc = 1;
  repeated ModelSplitIDProto loaded = 2;
  repeated ModelSplitIDProto loading = 3;
}

message ModelSplitGroupProto {
  required string name = 1;
  required string dir = 2;
  optional int32 concurrent = 3 [default = -1];
  repeated ModelSplitProto splits = 4;
  required string shardingModelClass = 5;
}

message ModelCommandProto {
  repeated ModelSplitGroupProto forLoading = 1;
  repeated ModelSplitIDProto forUnload = 2;
}


service AgentServingService {
  rpc registerAgent (ServingLocationProto) returns (CommonResponseProto);
  rpc modelReport (ModelReportProto) returns (ModelCommandProto);
}







